Korrektur von Anne R. zur Einleitung und Softwarearchitektur wurde eingefuegt

--- a/sections/Methodik/interviewfragen.tex
+++ b/sections/Methodik/interviewfragen.tex
@@ -1,5 +1,5 @@
 \subsection{Erstellung der Interviewfragen}
 
-Die Fragen für die Interviews wurden aus den Ergebnissen der Literaturrecherche erstellt. So Begann die Bachelor Thesis mit der Durchführung einer Literaturrecherche, in welcher Microservices, sowie Software Architektur definiert und beschrieben wurden. Nachfolgend wurden, die zur Erstellung und Einteilung von Microservices notwendigen, Faktoren benannt und beschrieben.  Die wichtigen Inhalte wurden anschließend in Abschnitt … zu neun Bedingungen zusammengetragen und als Grundlage für die Fragestellung verwendet.
+Die Fragen für die Interviews wurden aus den Ergebnissen der Literaturrecherche erstellt. So Begann die Bachelor Thesis mit der Durchführung einer Literaturrecherche, in welcher Microservices, sowie Softwarearchitektur definiert und beschrieben wurden. Nachfolgend wurden, die zur Erstellung und Einteilung von Microservices notwendigen, Faktoren benannt und beschrieben.  Die wichtigen Inhalte wurden anschließend in Abschnitt … zu neun Bedingungen zusammengetragen und als Grundlage für die Fragestellung verwendet.
 
 Dabei zielen die Fragen zum einen darauf ab, die einzelnen Annahmen zu validieren und zum anderen den Experten die Möglichkeit zu geben ihre Expertise einzubringen. Um dem gerecht zu werden, wurden vor allem offene Fragen gewählt. Nichtsdestoweniger orientierten sich die Fragestellungen an den in Abschnitt … definierten Bedingungen, sodass die Antworten aus den Interviews mit den Erkenntnissen aus der Literaturrecherche vergleicht werden konnten.
