--- a/sections/Theory/Produktmarketfit.tex
+++ b/sections/Theory/Produktmarketfit.tex
@@ -2,7 +2,7 @@
 \label{sec:start-up}
 %Korrektur lesen lassen von Marcel
 
-Obwohl im Zentrum dieser Arbeit die notwendigen Bedingungen für eine Microservicearchitektur stehen, lässt sich das volle Maß der Umstellung nur verstehen, wenn auch die Situation eines Start-up verstanden wird. Insbesondere \cref{sec:ddd} hat gezeigt, dass Software Architektur und Geschäftsprozesse eng mit einander verbunden sind. Demnach sollten \textit{\enquote{hart zu verändernde Entscheidungen}}\footnote{Direkter Bezug zur Definition von Martin Fowler aus \cref{sec:software-architect-definition}.} stets im Kontext der Unternehmenssituation getroffen werden. Demzufolge wird anschließend der Begriff Start-up definiert und einige Eigenschaften näher beschrieben.
+Obwohl im Zentrum dieser Arbeit die notwendigen Bedingungen für eine Microservicearchitektur stehen, lässt sich das volle Maß der Umstellung nur verstehen, wenn auch die Situation eines Start-up verstanden wird. Insbesondere \cref{sec:ddd} hat gezeigt, dass Softwarearchitektur und Geschäftsprozesse eng mit einander verbunden sind. Demnach sollten \textit{\enquote{hart zu verändernde Entscheidungen}}\footnote{Direkter Bezug zur Definition von Martin Fowler aus \cref{sec:software-architect-definition}.} stets im Kontext der Unternehmenssituation getroffen werden. Demzufolge wird anschließend der Begriff Start-up definiert und einige Eigenschaften näher beschrieben.
 
 Nach dem Wirtschaftslexikon Gabler ist ein Start-up, oder auch Start-up-Unternehmen, ein junges, noch nicht etabliertes Unternehmen, welches eine innovative Geschäftsidee verwirklichen möchte \parencite[vgl.][]{achleitner_start-up_2018}. Folglich agiert ein Start-up in einem jungen oder noch nicht existierenden Markt und muss erst ein funktionierendes Geschäftsmodell entwickeln. Wurde ein solches gefunden und implementiert, gilt das Unternehmen allgemein nicht mehr als Start-up \parencite[vgl.][]{wiki_start-up-unternehmen_2020}.
 
