--- a/sections/Theory/microservices.tex
+++ b/sections/Theory/microservices.tex
@@ -22,7 +22,7 @@ Kopplung hingegen beschreibt in welchem Maß, Funktionen und Klassen verbunden s
 
 Insbesondere in monolithischen Systemen können viele Kopplungen entstehen, da keine festen Abgrenzungen zwischen einzelnen logischen Bereiche definiert sind. Somit kann es sein, dass ein Monolith, welches historisch wächst, keine klare Struktur aufzeigt. Es entsteht hieraus ein System, welches bei kleinen Veränderung viele ungewollte Fehler erzeugt, die ggf. weitere Anpassungen erfordern.
 
-Für ein Microservicesarchtektur ist jedoch das Bestreben klare Abgrenzung zu erlangen, und einzelne stabile Services zu etablieren. Diese sollen soweit es geht von einander entkoppelt funktionieren. Somit ist das Ziel für eine Microservicearchitektur einen hohen Kohärenz bei geringer Kopplung zu besitzen. Dabei ist dies nicht nur die Zielsetzung für Microservices allgemein, sondern ein generelles Bestreben für stabile Systeme.\footnote{Dies bezieht sich auf das Gesetz von Constantine, welches besagt \textit{\enquote{A structure is stable if cohesion is strong and coupling is low.}} \parencite[S. 43]{endres_handbook_2003}.} Für Microservices bedeutet dies Konkret, dass ein Services ausschließlich aus funktional abhängigem Quellcode besteht und technische Implementierungen, wie zum Beispiel Datenbankstrukturen und Funktionsaufrufe, hinter klar definierten Schnittstellen versteckt sind.
+Für ein Microservicesarchtektur ist jedoch das Bestreben klare Abgrenzung zu erlangen, und einzelne stabile Services zu etablieren. Diese sollen soweit es geht von einander entkoppelt funktionieren. Somit ist das Ziel für eine Microservicearchitektur einen hohen Kohärenz bei geringer Kopplung zu besitzen. Dabei ist dies nicht nur die Zielsetzung für Microservices allgemein, sondern ein generelles Bestreben für stabile Systeme.\footnote{Dies bezieht sich auf das Gesetz von Constantine, welches besagt \textit{\enquote{A structure is stable if cohesion is strong and coupling is low.}} \parencite[S. 43]{endres_handbook_2003}.} Für Microservices bedeutet dies Konkret, dass ein Services ausschließlich aus funktional abhängigem Quellcode besteht und technische Implementierungen, wie z.B. Datenbankstrukturen und Funktionsaufrufe, hinter klar definierten Schnittstellen versteckt sind.
 
 \subsubsection{Das Gesetz von Conway}
 \label{sec:conway}
@@ -48,7 +48,7 @@ Wie aus dem \cref{sec:conway} hervorgeht, ist es das Ziel der Microservicesarchi
 
 Domain Driven Design ist dabei nicht exklusiv für Microserivces gedacht, sondern beschreibt vielmehr den Ansatz Softwareentwicklung und Geschäftsfunktion zu vereinen, welche in verschiedenen Architekturen umgesetzt werden kann. Nichtsdestoweniger ist Domain Driven Design wesentlich für die Bestimmung der Grenzen eines Services und somit entscheidet für Microservices \parencite[vgl.][Kap. 4.3]{wolff_microservices_2018}.
 
-Ein Hauptbestandteil des Domain Driven Designs ist der Gedanke des Kontextes bzw. der Kontextgrenze \parencite[vgl.][]{fowler_boundedContext_2014}. Eine Kontextgrenze ist dabei die Abgrenzung eines logischen Abschnittes (Kontext) innerhalb eines Unternehmens. Dadurch wird der Ansatz verfolgt, dass einzelne Funktionen und Inhalte nur innerhalb eines gewissen Bereiches Sinn ergeben. So ist zum Beispiel in einem E-Commerce Unternehmen bei der Bestellung von Ware die Anzahl, die Größe und das Gewicht entscheidend, während bei der Buchung Preis und Steuersatz wichtig sind. Des Weiteren kann je nach Kontext ein Begriff, wie Preis, unterschiedliche Bedeutungen haben \parencite[vgl.][S. 24 ff.]{evans_domain-driven_2003}. So bezieht sich dieser beim Bestellen von neuer Ware auf den Einkaufspreis, während er beim Verkaufen den Verkaufspreis meint. Somit hängt die Bedeutung des Wortes Preis vom dem zu lösenden Geschäftsprozess ab, in diesem Fall Bestellen von Ware oder Verkaufen von Produkten. Dies ist zwar nur ein einzelnes Beispiel, lässt sich jedoch auf Weitere übertragen. Demnach empfiehlt Domain Driven Design Kontextgrenzen so zu setzen, dass sie ein Geschäftsprozess umschließen und idealerweise genau ein spezifisches Problem lösen \parencite[vgl.][Kap. 4.3]{wolff_microservices_2018}.
+Ein Hauptbestandteil des Domain Driven Designs ist der Gedanke des Kontextes bzw. der Kontextgrenze \parencite[vgl.][]{fowler_boundedContext_2014}. Eine Kontextgrenze ist dabei die Abgrenzung eines logischen Abschnittes (Kontext) innerhalb eines Unternehmens. Dadurch wird der Ansatz verfolgt, dass einzelne Funktionen und Inhalte nur innerhalb eines gewissen Bereiches Sinn ergeben. So ist z.B. in einem E-Commerce Unternehmen bei der Bestellung von Ware die Anzahl, die Größe und das Gewicht entscheidend, während bei der Buchung Preis und Steuersatz wichtig sind. Des Weiteren kann je nach Kontext ein Begriff, wie Preis, unterschiedliche Bedeutungen haben \parencite[vgl.][S. 24 ff.]{evans_domain-driven_2003}. So bezieht sich dieser beim Bestellen von neuer Ware auf den Einkaufspreis, während er beim Verkaufen den Verkaufspreis meint. Somit hängt die Bedeutung des Wortes Preis vom dem zu lösenden Geschäftsprozess ab, in diesem Fall Bestellen von Ware oder Verkaufen von Produkten. Dies ist zwar nur ein einzelnes Beispiel, lässt sich jedoch auf Weitere übertragen. Demnach empfiehlt Domain Driven Design Kontextgrenzen so zu setzen, dass sie ein Geschäftsprozess umschließen und idealerweise genau ein spezifisches Problem lösen \parencite[vgl.][Kap. 4.3]{wolff_microservices_2018}.
 
 % Todo add Beschreibung von Wolff nachdem sich Microservices an den single responsebility richtet.
 
