--- a/sections/Einleitung.tex
+++ b/sections/Einleitung.tex
@@ -6,7 +6,7 @@ Diese schnelle Softwareentwicklung führt jedoch zu einigen Abstrichen hinsichtl
 
 Genau an diesem Punkt befindet sich das junge Unternehmen PluraPolit, das Mitte letzten Jahres gegründet wurde und innerhalb von wenigen Monaten ein fertiges Produkt entwickelte. PluraPolit hat sich zur Aufgabe gestellt, eine Bildungsplattform für Jung- und Erstwähler zu entwickeln und sie bei der Meinungsbildung zu unterstützen. Gefördert wird das Projekt von der Zentrale für politische Bildung und ist politisch unabhängig. Als gemeinnütziges Unternehmen verfolgt PluraPolit nicht die Absicht, Gewinne zu erzielen.
 
-Ich bin seit Anfang Januar an diesem Projekt beteiligt und begleite es als Frontend-Entwickler. Gemeinsam mit einem der drei Gründer bilden wir zu zweit die technische Abteilung des Unternehmens und sind für die Weiterentwicklung der Plattform zuständig. Die Inhalte der Plattform werden von den zwei anderen Gründern eingepflegt. Im Mittelpunkt stehen aktuelle politische Fragestellungen wie zum Beispiel: \textit{\enquote{Sollte der öffentlich-rechtliche Rundfunk abgeschafft werden?}} Hierzu werden Statements von Politikerinnen und Politikern aller Parteien, die im Bundestag vertreten sind, eingeholt und als Audioaufzeichnungen ohne inhaltliche Veränderung auf die Webseite geladen. Neben Fragen, die ausschließlich von Politikern diskutiert werden, kommen auch Themen auf die Plattform, die von den dafür ausgewiesenen Expertinnen und Experten beantwortet werden. So gibt es z.B. bei der oben genannten Fragestellung auch eine Stellungnahme des Vertreters der Landesrundfunkanstalten ARD. 
+Ich bin seit Anfang Januar an diesem Projekt beteiligt und begleite es als Frontend-Entwickler. Gemeinsam mit einem der drei Gründer bilden wir zu zweit die technische Abteilung des Unternehmens und sind für die Weiterentwicklung der Plattform zuständig. Die Inhalte der Plattform werden von den zwei anderen Gründern eingepflegt. Im Mittelpunkt stehen aktuelle politische Fragestellungen wie z.B.: \textit{\enquote{Sollte der öffentlich-rechtliche Rundfunk abgeschafft werden?}} Hierzu werden Statements von Politikerinnen und Politikern aller Parteien, die im Bundestag vertreten sind, eingeholt und als Audioaufzeichnungen ohne inhaltliche Veränderung auf die Webseite geladen. Neben Fragen, die ausschließlich von Politikern diskutiert werden, kommen auch Themen auf die Plattform, die von den dafür ausgewiesenen Expertinnen und Experten beantwortet werden. So gibt es z.B. bei der oben genannten Fragestellung auch eine Stellungnahme des Vertreters der Landesrundfunkanstalten ARD. 
 
 Im Gegensatz zu anderen Anbietern von Nachrichten rund um Politik, stellt PluraPolit ausschließlich Sprachnachrichten auf die Plattform. Die Entscheidung für das Medium Tonaufnahme wurde bewusst getroffen, um eine junge Zielgruppe anzusprechen und die einzelnen Beiträge wie einen Podcast hören zu können.
 
@@ -21,8 +21,8 @@ React.js ist eine JavaScript Bibliothek zum Erstellen von Benutzeroberflächen. 
 Gehostet werden die Applikationen über den Cloud-Computing-Anbieter Amazon Web Services\footnotemark (AWS).
 \footnotetext{AWS ist ein Tochterunternehmen des Online-Versandhändlers Amazon mit einer Vielzahl an Diensten im Bereich Cloud-Computing \parencite{amazon_homepage}.}
 
-	Es wurde sich für diesen Dienst entschieden, um möglichst geringe Fixkosten zu haben und bei Bedarf die Kapazität ändern zu können. Die Anwendung wird in einem Docker-Container\footnote{Docker-Container sind isolierte virtuelle Umgebungen, in der eine Anwendung separat vom System des Rechners betrieben wird. Dadurch können Applikationen leicht von einem Computer zu einem Hosting Dienst geladen werden \parencite{docker_container}.} gespeichert und per Github Actions\footnote{Github Actions ist ein Software Dienst von Github, welches hilft Prozesse zu automatisieren. Es kann zum Beispiel zum automatischen Bereitstellen einer Webseite verwendet werden \parencite{github_actions}.} an AWS geliefert. Dort wird die Applikation in das Elastic Container Service\footnote{Elastic Container Service ist ein Container-Orchestrierungs-Service von Amazon Web Services, mit dessen Hilfe Container skalierbar verwaltet werden können \parencite{aws_ecs}.} (ECS) geladen und von Fargate\footnote{Fargate ist eine Serverless-Datenverarbeitungs-Engine, welche Container im Rahmen der vordefinierten Parameter verwaltet. So werden zum Beispiel durch diesen Dienst bei erhöhtem Bedarf neue Instanzen bereitgestellt und bei Verlust von Last Container-Instanzen eliminiert \parencite{aws_fargate}.} verwaltet. 
-	Die Daten werden in einer PostgreSQL\footnote{PostgreSQL ist eine objektrelationale Datenbank, welche sowohl Elemente einer relationalen als auch einer Objektdatenbank besitzt \parencite{postgresql}.} Datenbank abgespeichert, die auf einer Relational Database Service\footnote{RDS ist ein Service von Amazon Web Services, mit dessen Hilfe relationale Datenbanken verwaltet werden. Der Dienst ermöglicht das Aufsetzen, Managen und Skalieren von Datenbanken, wie zum Beispiel MySQL, MariaDB und PostgreSQL \parencite[vlg.][S.161 f.]{baron_aws_2016}.} (RDS) Instanz hinterlegt ist. 
+	Es wurde sich für diesen Dienst entschieden, um möglichst geringe Fixkosten zu haben und bei Bedarf die Kapazität ändern zu können. Die Anwendung wird in einem Docker-Container\footnote{Docker-Container sind isolierte virtuelle Umgebungen, in der eine Anwendung separat vom System des Rechners betrieben wird. Dadurch können Applikationen leicht von einem Computer zu einem Hosting Dienst geladen werden \parencite{docker_container}.} gespeichert und per Github Actions\footnote{Github Actions ist ein Software Dienst von Github, welches hilft Prozesse zu automatisieren. Es kann z.B. zum automatischen Bereitstellen einer Webseite verwendet werden \parencite{github_actions}.} an AWS geliefert. Dort wird die Applikation in das Elastic Container Service\footnote{Elastic Container Service ist ein Container-Orchestrierungs-Service von Amazon Web Services, mit dessen Hilfe Container skalierbar verwaltet werden können \parencite{aws_ecs}.} (ECS) geladen und von Fargate\footnote{Fargate ist eine Serverless-Datenverarbeitungs-Engine, welche Container im Rahmen der vordefinierten Parameter verwaltet. So werden z.B. durch diesen Dienst bei erhöhtem Bedarf neue Instanzen bereitgestellt und bei Verlust von Last Container-Instanzen eliminiert \parencite{aws_fargate}.} verwaltet. 
+	Die Daten werden in einer PostgreSQL\footnote{PostgreSQL ist eine objektrelationale Datenbank, welche sowohl Elemente einer relationalen als auch einer Objektdatenbank besitzt \parencite{postgresql}.} Datenbank abgespeichert, die auf einer Relational Database Service\footnote{RDS ist ein Service von Amazon Web Services, mit dessen Hilfe relationale Datenbanken verwaltet werden. Der Dienst ermöglicht das Aufsetzen, Managen und Skalieren von Datenbanken, wie z.B. MySQL, MariaDB und PostgreSQL \parencite[vlg.][S.161 f.]{baron_aws_2016}.} (RDS) Instanz hinterlegt ist. 
 	Bilder und Tonaufnahmen werden in einem Simple Storage Service-Bucket\footnote{Der Speicherdienst von AWS S3 ist einer der ersten Dienste des Cloud-Computing-Anbieters. Er erleichtert die Speicherung von Objekten in der Cloud jeglichen Formats und lässt sich einfach verwalten. Die verwendete Speichermenge ist dynamisch und richtet sich automatisch nach der Größe der Dateien \parencite[vlg.][S. 23]{baron_aws_2016}.} (S3) gespeichert und stehen der Webseite per URL zur Verfügung. 
 	Um automatisch zu jedem Beitrag Intros zu generieren, wurde eine AWS Lambda\footnote{Amazon Lambda ist ein Service von AWS, über den Funktionalität innerhalb der Cloud ausgeführt wird. Es handelt sich dabei um ein Service der Serverless ist, was bedeutet, dass man sich nicht um das Betriebssystem des Servers kümmern muss. Somit können kleine Programme mit wenig Aufwand ausgeführt werden \parencites[vlg.][Kap. 15.3]{wolff_microservices_2018}{aws_lambda}.} Funktion geschrieben, die auf der Basis von Beschriftungstexten für jede Audioaufzeichnung eine weitere Aufnahme für die Einleitung erstellt.
 
@@ -55,4 +55,5 @@ Im ersten Abschnitt wird die theoretische Grundlage für Microservices dargestel
 
 Im nächsten Abschnitt werden diese Bedingungen im Rahmen einer qualitativen Befragung von Experten im Bereich Microservices eingeschätzt und bewertet. Hierfür werden Interviews durchgeführt. Es wird beschrieben, welche Experten ausgewählt werden und welche Expertise sie mitbringen. Die einzelnen Interviewfragen werden vorgestellt und deren Zusammenhang zur Zielsetzung erklärt. Dadurch wird deutlich, welchen Einfluss die Expertenaussagen auf die Einschätzung für PluraPolit haben.
 
+%Todo noch einmal überarbeiten nachdem die Arbeit geschrieben wurde
 Abschließend werden die Aussagen aus den Befragungen mit der theoretischen Ausarbeitung verglichen und auf PluraPolit bezogen. Hierfür wird die Machbarkeit für das junge Unternehmen hinterfragt und die Auswertung diskutiert. Neben Microservices wird auch SOA als alternative Lösung vorgestellt. Beendet wird die These mit einer Einschätzung für PluraPolit, in der eine klare Beurteilung für oder gegen eine Überführung abgegeben wird.
