Der Text zur Durchfuehrung wurde hinzugefuegt

--- a/sections/Methodik/analyse.tex
+++ b/sections/Methodik/analyse.tex
@@ -1,4 +1,4 @@
-\subsubsection{Auswertung des Interviews}
+\subsection{Methodik zur Auswertung}
 
 Beispiel:
 Die Interviews mit den Bewohnern von Gebäude X wurden transkribiert. Die Transkripte wurden anschließend offen und axial codiert, um diese Daten quantitativ in SPSS analysieren zu können. Danach wurden die Daten mithilfe einer Regressionsanalyse untersucht, um eine Antwort auf die Forschungsfrage zu erhalten.
