--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -1,17 +1,15 @@
 \subsection{Durchführung des Interviews}
 
-Zeit und Ort
-Beschreibung der Interviews
+Um eine qualitative Bewertung über die Bedingungen, die für PluraPolit für eine Umstellung notwenig sind, zu erhalten, sollten semi-strukturierte Interviews mit fünf Experten durchgeführt werden. Die Experten sollten dabei Kenntnisse im Erstellen von Microservices ausweisen, sowie jahrelange Berufserfahrung in der Start-up-Branche haben und die Softwarearchitektur von PluraPolit kennen. So stellte sich jedoch heraus, dass nur zwei der ursprünglich ausgesuchten Experten, diese Anforderungen erfüllten. Demnach wurde nur mit Christoph Rahles und Alex Troppman ein Interview durchgeführt. Die Experten kennen sich untereinander nicht, sodass ihre Antworten unabhängig von einander gegeben wurde.
 
-Einschlusskriterien: Welche Daten du in die Untersuchung einbeziehst.
-Ausschlusskriterien: Welche Daten du nicht in deine Untersuchung aufgenommen hast.
+Beide Kandidaten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem online Gespräch eingeladen. Es wurde sich für eine Konferenzgespräch von Angesicht zu Angesicht entschieden, um eine persönlichere Atmosphäre zu erzeugen und gleichzeitig die Kotaktbeschrenkungen in der Coronapandemie einzuhalten. Hinzu kann das Herr Troppman in München wohnte und ein Gespräch nur online möglich war.
 
+Beiden Kandidaten wurden die Fragen vorab zugeschickt, sodass sie sich vorbereiten konnten. Auch wurden beide vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wird, um die anschließende Transcripierung zu vereinfachen. Dies geschah zum einen bei den Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren wurde unmittelbar vor der Aufzeichnung sich vor beiden Experten eine mündliche Bestätigung eingeholt, dass ihre Aussagen in der Bachelor Thesis verwendet werden dürfen.
 
-Beispiel: 
-Die Absicht war, eine Umfrage unter 350 Kunden der Firma X durchzuführen. Dafür sollten vor Ort in der Firma in Berlin vom 4. bis zum 8. Juli 2017 zwischen 11:00 und 15:00 Uhr die Fragebogen verteilt werden. Die Kunden hatten fünf Minuten Zeit, um den Fragebogen auszufüllen, und konnten sich dafür gemeinsam an einen Tisch setzen, an dem es nicht möglich war, die Antworten der anderen Teilnehmer einzusehen. Der Fragebogen wurde insgesamt von 408 Kunden beantwortet. Da nicht alle Fragebogen vollständig ausgefüllt waren, konnten nur 371 Ergebnisse in die Analyse einbezogen werden.
+Während der Interviews wurden Notizen gemacht, um die Antworten zu erfassen. Vereinzelnd wurden dem Experten Rückfragen gestellt, um weitere Informationen zu erhalten.
 
-Um detailliertere Einsicht in die Möglichkeiten zur Verbesserung der Produktpalette zu gewinnen, sollten semi-strukturierte Interviews mit zehn Stammkunden aus der Hauptzielgruppe von Firma X geführt werden. Jedoch stellte sich im Laufe der Forschung heraus, dass bereits nach acht Interviews zufriedenstellende Ergebnisse erzielt waren. Daher wurden im Anschluss keine weiteren Interviews geführt.
+Nach der Begrüßt und dem Hinweis, dass es sich um ein Aufgezeichnetes Gespräch handelt, begann das Interview mit folgender Frage: 
 
-Die Interviews wurden dann geführt, wenn die Fragebogen gezeigt haben, dass ein Kunde zu der Zielgruppe gehörte und mehr als zweimal die Woche Produkte der Firma X kaufte. Sie fanden in einem kleinen Büro in der Nähe der Kasse statt, wo zusätzlich zum Interviewer und Befragten auch ein Angestellter der Firma X anwesend war, der dort seiner Arbeit nachging. Aus diesem Grund ist es möglich, dass manche der Befragten sozial erwünschte Antworten gaben. Darauf wird näher eingegangen, wenn die Validität und die Reliabilität der Forschung erörtert werden.
+\textit{Haben Sie das Gefühl, dass es Bedingungen gibt, die PluraPolit erfüllen sollte, bevor es ihre Software Architektur zu einer Microservice-Architektur umstellt und wenn ja, welche Bedingungen empfinden Sie als wichtig?}
 
-Während der Interviews wurden Notizen gemacht, um die Antworten zu erfassen. Sieben Interviews wurden zusätzlich mit Einverständnis der Befragten gefilmt, um die Interviews zu beschreiben und zu transkribieren. Ein Befragter zog es vor, nicht gefilmt oder aufgenommen zu werden, sodass dieses Interview nur mithilfe von Notizen nachvollzogen werden kann.
+Diese Frage zielte darauf ab, zum einen die zur grundlegende Annahme, dass es Bedingungen gibt, zu beantworten, als auch ein ersten Einblick von diesen Bedingungen zu erhalten. Die Frage war möglichst offen gestellt, um den Experten die Möglichkeit voreingenommen zu antworten.
